# hat

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: cd.yml  ci.yml  hpc-module.yml  on-push.yml
docs/: command_line_tools.md  hat_extract-timeseries.md  hat_hydrostats.md  index.md  installation.md  python_api.md  reference.md  station_mapping.md  usage.md
hat/: __init__.py  cli.py  config.py  core.py  data.py  extract_simulation_timeseries.py  filters.py  geo.py  graphs.py  hydrostats.py  hydrostats_decorators.py  hydrostats_functions.py  images.py  observations.py  parsers.py  plots.py  timeseries.py  visualisation.py  visualisation_v2.py
hat/compute_hydrostats/: stat_calc.py  stats.py
hat/config_json/: river_network_coordinate_names.json  timeseries.json
hat/core/: dataset.py  test.yml  time.py
hat/extract_timeseries/: extractor.py
hat/interactive/: __init__.py  explorers.py  leaflet.py  widgets.py
hat/mapping/: evaluation.py  input.json  station_mapping.py  station_mapping.sh  test_station_mapping.py  visualisation.py
hat/station_mapping/: distance_metrics.py  mapper.py  metrics.py  station_mapping.py
hat/tools/: extract_simulation_timeseries_cli.py  hydrostats_cli.py  station_mapping_cli.py
notebooks/examples/: 1_extract_timeseries_from_grids.ipynb  2_run_analysis.ipynb  3_map_and_graph.ipynb  4_visualisation_interactive.ipynb  4_visualisation_interactive_d.ipynb  4_visualisation_interactive_template.ipynb  5_station_mapping.ipynb  5a_station_mapping_evaluate.ipynb  5b_station_mapping_visualise.ipynb  station_mapping_config_example.json
notebooks/explorers/: pp_forecast.ipynb  reanalysis.ipynb
notebooks/old/examples/: 1_extract_timeseries_from_grids.ipynb  3_map_and_graph.ipynb  4_visualisation_interactive.ipynb  4_visualisation_interactive_template.ipynb  5a_station_mapping_evaluate.ipynb  station_mapping_config_example.json
notebooks/old/workflows/: kge_workflow.ipynb
notebooks/workflow/: hydrostats_computation.ipynb  station_mapping.ipynb  timeseries_extraction.ipynb
notebooks/workflows/: kge_workflow.ipynb
src/bash/: hpc-start.sh  pull-code.sh  start-hat.sh
src/command_line_tools/: extract_simulation_timeseries_cli.py  hydrostats_cli.py  install_hat.py  mars_request_cli.py  river_network_coordinate_names.py
src/hat/: cli.py  clock.py  config.py  data.py  exceptions.py  extract_simulation_timeseries.py  filters.py  geo.py  hydrostats.py  hydrostats_decorators.py  hydrostats_functions.py  images.py  networking.py  observations.py  plots.py  read_observations.py  timeseries.py
src/hat/config_json/: timeseries.json
tests/: __init__.py  test_config.py  test_extractor.py  test_hydrostats_cli.py  test_hydrostats_decorators.py  test_hydrostats_functions.py  test_imports.py  test_interactive.py  test_mapping.py  test_mapping_evaluation.py
