[metadata]
name = hydro_analysis_toolkit
version = attr: hat.version.__version__
author = European Centre for Medium-Range Weather Forecasts (ECMWF)
author_email = software.support@ecmwf.int
license = Apache 2.0
license_files = LICENSE
description = ECMWF Hydrological Analysis Tools
long_description = file: README.md
long_description_content_type=text/markdown
url = https://hydro-analysis-toolkit.readthedocs.io

[options]
packages = find:
include_package_data = True
install_requires =
    click
    dask
    earthkit-data
    geopandas
    humanize
    ipyleaflet
    ipython
    ipywidgets
    jsonschema
    matplotlib
    numpy
    pandas
    plotly
    pyproj
    pytest
    setuptools
    Shapely
    tqdm
    typer
    xarray


[options.package_data]
hat = config_json/*.json

[options.packages.find]
include = hat*

[options.entry_points]
console_scripts =
    hat-extract-timeseries = hat.tools.extract_simulation_timeseries_cli:main
    hat-hydrostats = hat.tools.hydrostats_cli:main

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
